--- a/vars.yml
+++ b/vars.yml
@@ -7,3 +7,13 @@
     - name: acess a variable
       ansible.builtin.debug:
         msg: URL == {{URL}}
+---
+- name: declsre variable at play level
+  hosts: all
+  connection: local
+  tasks:
+    - name: declare and access a variable
+      ansible.builtin.debug:
+        msg: URL == {{URL}}
+      vars:
+        URL: play.example.com
