--- a/vars.yml
+++ b/vars.yml
@@ -16,4 +16,4 @@
       ansible.builtin.debug:
         msg: URL == {{URL}}
       vars:
-        URL: task.example.com
+        URL: task123.example.com
