--- a/vars.yml
+++ b/vars.yml
@@ -12,11 +12,11 @@
 - name: declare a variable in another file
   hosts: all
   connection: local
-  vars_file:
-      - var.yml
+  vars_files:
+    - var.yml
   tasks:
-   - name: declare and access a variable
-     ansible.builtin.debug:
+    - name: access a variable
+      ansible.builtin.debug:
         msg: URL == {{URL}}
 
 - name: declare variable at task level
