--- a/06-parameter-store.yml
+++ b/06-parameter-store.yml
@@ -1,4 +1,4 @@
-- name: Read a value from parameter store
+- name: read a value from parameter store
   hosts: localhost
   connection: local
   tasks:
